--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-source-filesystem": "^2.3.25",
     "gatsby-transformer-sharp": "^2.5.13",
+    "lottie-api": "^1.0.2",
+    "lottie-react-web": "^2.2.2",
+    "lottie-web": "^5.7.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "prettier": "2.1.0"
